<resources>
    <string name="app_name">Registration Form</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_pass">Password</string>
    <string name="tv_user">Username</string>
    <string name="Full_name">Full Name</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="reg">Register</string>
    <string name="Gender_M">Male</string>
    <string name="Gender_F">Female</string>
</resources>

